2004-08-08 Julien Puydt <jpuydt@free.fr>

	* lib/contacts/gm_contacts-dnd.c, lib/contacts/gm_contacts-dnd.h:
	Added those files, with the internal DnD-managing routines.
	* lib/contacts/gm_contacts.h, lib/contacts/gm_contacts.cpp: Declared
	and implemented the external DnD-managing routines.
	* lib/contacts/Makefile.am: Added the dnd files to the compile target.
	* src/addressbook_window.cpp, src/calls_history_window.cpp,
	src/main_window.cpp: Made use of the new DnD code.
	
2004-08-05  Damien Sandras  <dsandras@gnome.org>

	* NEWS: Updated with CVS news.	                                                                                
2004-08-05  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp: Fixed bug preventing the right-click
	popup menu to be displayed when a contact is clicked.

2004-08-04  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Added check for ENUM/DNS support in PWLIB.

2004-08-04  Damien Sandras  <dsandras@gnome.org>

	* src/common.h, src/gnomemeeting.cpp, src/main_window.cpp, 
	src/main_window.h: More code cleanups to convert the main window to
	a GmObject.

2004-08-04  Julien Puydt <jpuydt@free.fr>

	* lib/contacts/gm_contacts-convert.c,
	lib/contacts/gm_contacts-convert.h: Commented the thing. I'm surprised
	Damien didn't complain ;-)

2004-08-03  Julien Puydt <jpuydt@free.fr>
	
	* lib/contacts/e-vcard.c, lib/contacts/e-vcard.h: Come directly from
	evolution-data-server's cvs: manage vcards.
	* lib/contacts/gm_contacts-convert.c,
	lib/contacts/gm_contacts-convert.h: Add the possibility to translate
	a GmContact to and from a vcard (gchar*), using the e-vcard.[ch].
	* lib/contacts/Makefile.am: Added the previous files to the sources
	list.
	
2004-08-02  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp: Removed unuseful warning.

2004-07-27  Julien Puydt <jpuydt@free.fr>

	* lib/gm_conf-glib.c: Made it possible to remove a full namespace.
	* src/common.h: Removed unneeded defines.
	