@@ -4,7 +4,6 @@
 #define _GM_CONTACTS_H_INSIDE__
 #include "gm_contacts-local.h"
 #include "gm_contacts-remote.h"
-#include "gm_contacts-dnd.h"
 #undef _GM_CONTACTS_H_INSIDE__
 #endif
 
@@ -132,60 +131,4 @@ gnomemeeting_addressbook_init (gchar *group_name,
   g_return_if_fail (group_name != NULL && addressbook_name != NULL);
   
   gnomemeeting_local_addressbook_init (group_name, addressbook_name);
-}
-
-
-void
-gm_contacts_dnd_set_source (GtkWidget *widget,
-			    GmDndGetContact helper, 
-			    gpointer data)
-{
-  g_return_if_fail (widget != NULL);
-  g_return_if_fail (helper != NULL);
-
-  gtk_drag_source_set (widget, GDK_BUTTON1_MASK,
-                       dnd_targets, DND_NUMBER_OF_TARGETS,
-                       GDK_ACTION_COPY);
-
-  g_signal_connect (G_OBJECT (widget), "drag_data_get",
-                    G_CALLBACK (drag_data_get_cb), (gpointer)helper);
-
-  g_object_set_data (G_OBJECT (widget), "GmDnD-Source", data);
-}
-
-
-void
-gm_contacts_dnd_set_dest (GtkWidget *widget, 
-			  GmDndPutContact helper,
-			  gpointer data)
-{
-  g_return_if_fail (widget != NULL);
-  g_return_if_fail (helper != NULL);
-
-  gtk_drag_dest_set (widget,
-                     GTK_DEST_DEFAULT_ALL,
-                     dnd_targets, DND_NUMBER_OF_TARGETS,
-                     GDK_ACTION_COPY);
-  
-  g_signal_connect (G_OBJECT (widget), "drag_data_received",
-                    G_CALLBACK (drag_data_received_cb), (gpointer)helper);
-
-  g_object_set_data (G_OBJECT (widget), "GmDnD-Target", data);
-}
-
-
-void
-gm_contacts_dnd_set_dest_conditional (GtkWidget *widget, 
-				      GmDndPutContact helper,
-				      GmDndAllowDrop checker,
-				      gpointer data)
-{
-  g_return_if_fail (widget != NULL);
-  g_return_if_fail (helper != NULL);
-  g_return_if_fail (checker != NULL);
-
-  gm_contacts_dnd_set_dest (widget, helper, data);
-
-  g_signal_connect (G_OBJECT (widget), "drag_motion",
-		    G_CALLBACK (drag_motion_cb), (gpointer)checker);
 }
