@@ -1,3 +1,10 @@
+2004-08-10 Julien Puydt <jpuydt@free.fr>
+
+	* lib/contacts/gm_contacts.cpp, lib/contacts/gm_contacts.h,
+	lib/contacts/gm_contacts-dnd.c, lib/contacts/gm_contacts-dnd.h: Moved
+	code around like Damien suggested: all DnD implementation is now in
+	gm_contacts-dnd.c.
+
 2004-08-08 Julien Puydt <jpuydt@free.fr>
 
 	* lib/contacts/gm_contacts-dnd.c, lib/contacts/gm_contacts-dnd.h:
